# ijni

./: ArraySet.class.adapted  HelloWorld.java  build.sh  build2.sh  build_jit.sh  howtojit.cpp  native_lib.c  native_lib.cpp  run.sh
jvmti_test/: CMakeLists.txt  agent.cpp  build.sh
